rustdocs/errors/rust-bitcoin-fuzz-fuzz_targets-bitcoin-deserialize_witness.rs.txt
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `bitcoin`
 --> ../rust-bitcoin/fuzz/fuzz_targets/bitcoin/deserialize_witness.rs:1:5
  |
1 | use bitcoin::witness::Witness;
  |     ^^^^^^^ use of unresolved module or unlinked crate `bitcoin`
  |
help: you might be missing a crate named `bitcoin`, add it to your project and import it in your code
  |
1 + extern crate bitcoin;
  |

error[E0432]: unresolved import `honggfuzz`
 --> ../rust-bitcoin/fuzz/fuzz_targets/bitcoin/deserialize_witness.rs:2:5
  |
2 | use honggfuzz::fuzz;
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `honggfuzz`
  |
help: you might be missing a crate named `honggfuzz`, add it to your project and import it in your code
  |
1 + extern crate honggfuzz;
  |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
